LightGBM pedict_null problem

--- a/기존모델/Project/Project_Model.ipynb
+++ b/기존모델/Project/Project_Model.ipynb
@@ -318,6 +318,27 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "y_true = y_test\n",
+    "y_pred = lgbm_reg.predict(X_test)\n",
+    "\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "df = pd.DataFrame({'y_true':y_true, 'y_pred':y_pred})\n",
+    "cor = df['y_true'].corr(df['y_pred'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
