--- a/새로운모델/Project_Model_LGBM.ipynb
+++ b/새로운모델/Project_Model_LGBM.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "ALL_COLUMN = df.columns.tolist()\n",
@@ -128,8 +128,7 @@
    "cell_type": "markdown",
    "source": [
     "# 범주형 변수 인코딩 >  불필요한 컬럼 + 인코딩 전 범주형 변수 삭제 > 합치기\n",
-    "## TODO\n",
-    "### [LightGBM] [Warning] Met categorical feature which contains sparse values. Consider renumbering to consecutive integers started from zero\n"
+    "#### [LightGBM] [Warning] Met categorical feature which contains sparse values. Consider renumbering to consecutive integers started from zero >> 해결하기\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -222,6 +221,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[LightGBM] [Warning] Met categorical feature which contains sparse values. Consider renumbering to consecutive integers started from zero\n",
+      "[LightGBM] [Warning] Met categorical feature which contains sparse values. Consider renumbering to consecutive integers started from zero\n",
+      "[LightGBM] [Warning] Met categorical feature which contains sparse values. Consider renumbering to consecutive integers started from zero\n",
       "[1]\tvalid_0's binary_logloss: 0.341604\n",
       "[2]\tvalid_0's binary_logloss: 0.31888\n",
       "[3]\tvalid_0's binary_logloss: 0.301711\n",
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -357,7 +359,7 @@
       "Confusion Matrix\n",
       "[[32826   875]\n",
       " [ 2629  2246]]\n",
-      "정확도:0.9091663210286188, 정밀도:0.7196411406600448, 재현율:0.46071794871794874, f1-score:0.5617808904452226\n"
+      "accuracy:0.9092, precision:0.7196, recall:0.4607, f1-score:0.5618\n"
      ]
     }
    ],
@@ -375,7 +377,7 @@
     "    f1 = f1_score(y_test,pred)\n",
     "    print('Confusion Matrix')\n",
     "    print(confusion)\n",
-    "    print('정확도:{}, 정밀도:{}, 재현율:{}, f1-score:{}'.format(accuracy, precision, recall,f1))\n",
+    "    print('accuracy:{}, precision:{}, recall:{}, f1-score:{}'.format(round(accuracy,4), round(precision,4) ,round(recall,4), round(f1,4)))\n",
     "\n",
     "get_clf_eval(y_true, y_pred)\n",
     "\n",
