--- a/새로운모델/Project_Model_LGBM.ipynb
+++ b/새로운모델/Project_Model_LGBM.ipynb
@@ -327,8 +327,34 @@
    ],
    "source": [
     "from lightgbm import LGBMClassifier\n",
-    "model = LGBMClassifier()\n",
-    "model.fit(x_train, y_train,  eval_set = (x_val,y_val), categorical_feature =CATEGORICAL_COLUMN )"
+    "\n",
+    "def objective(trial):\n",
+    "    param = {\n",
+    "        \"objective\": \"binary\",\n",
+    "        \"metric\": \"binary_error\",\n",
+    "        \"verbosity\": -1,\n",
+    "        \"boosting_type\": \"gbdt\",\n",
+    "        'num_leaves': trial.suggest_int('num_leaves', 2, 512),\n",
+    "        'feature_fraction': trial.suggest_uniform('feature_fraction', 0.1, 1.0),\n",
+    "        'bagging_fraction': trial.suggest_uniform('bagging_fraction', 0.1, 1.0),\n",
+    "        'bagging_freq': trial.suggest_int('bagging_freq', 0, 15),\n",
+    "        'min_child_samples': trial.suggest_int('min_child_samples', 1, 100),\n",
+    "    }\n",
+    "    lgbm = LGBMClassifier(**param)\n",
+    "    lgbm.fit(x_train, y_train,  eval_set = (x_val,y_val),\n",
+    "             categorical_feature =CATEGORICAL_COLUMN)\n",
+    "    pred = lgbm.predict(x_test)\n",
+    "    f1 = f1_score(y_test, pred)\n",
+    "\n",
+    "    return f1\n",
+    "\n",
+    "studyLGBM = optuna.create_study(direction='maximize')\n",
+    "studyLGBM.optimize( objective, n_trials = 5)\n",
+    "\n",
+    "print('study.best_params:', studyLGBM.best_trial.value)\n",
+    "print('Number of finished trials:', len(studyLGBM.trials))\n",
+    "print('Best trial:', studyLGBM.best_trial.params)\n",
+    "print('study.best_params:', studyLGBM.best_params)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -339,21 +365,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix\n",
-      "[[32760   941]\n",
-      " [ 2501  2374]]\n",
-      "accuracy:0.9108, precision:0.7161, recall:0.487, f1-score:0.5797\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "y_pred = model.predict(x_test)\n",
+    "parameter = studyLGBM.best_params\n",
+    "parameter_2 ={\"objective\": \"binary\",\n",
+    "        \"metric\": \"binary_error\",\n",
+    "        \"verbosity\": -1,\n",
+    "        \"boosting_type\": \"gbdt\"\n",
+    "\t\t\t  }\n",
+    "parameter =dict(**parameter_2, **parameter)\n",
+    "parameter\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "lgbm = LGBMClassifier(**parameter)\n",
+    "lgbm.fit(x_train, y_train,  eval_set = (x_val,y_val),\n",
+    "         categorical_feature =CATEGORICAL_COLUMN)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "y_pred = lgbm.predict(x_test)\n",
     "y_true = np.array(y_test)\n",
     "\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, confusion_matrix, f1_score\n",
@@ -376,7 +428,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
